added PDM to projects

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -164,6 +164,10 @@
   }
 }
 
+.pdm {
+  background-image: url('../../assets/images/projects/pdm.png');
+}
+
 .pbhomes {
   background-image: url('../../assets/images/projects/pbhomes.png');
 }
